Test Org - Speridian/src/objects/BA_Group_Eligibility_Questions__c.object
<CustomObject>
    <fields>
        <fullName>ba_Eligibility__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Parent Eligibility</label>
        <referenceTo>BA_Group_Eligibilty__c</referenceTo>
        <relationshipLabel>Group Eligiblity Questions</relationshipLabel>
        <relationshipName>Group_Eligiblity_Questions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_Eligiblity_Answer__c</fullName>
        <label>Eligiblity Answer</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Eligiblity_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Eligiblity Question</label>
        <referenceTo>BA_Eligiblity_Administration__c</referenceTo>
        <relationshipLabel>Group Eligiblity Questions</relationshipLabel>
        <relationshipName>Group_Eligiblity_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Eligiblity Questions</label>
    <nameField>
        <displayFormat>GEQ-{0000}</displayFormat>
        <label>Group Eligiblity Questions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Eligiblity Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>